Fixed layout problems on mobile

--- a/public/css/monk-widget.css
+++ b/public/css/monk-widget.css
@@ -30,7 +30,8 @@
 	border-radius: 5px 5px 0 0;
 	height: 21px;
 	margin: 0 0 0 -1px;
-	min-width: 22.9%;
+	width: 22.9%;
+	min-width: 180px;
 	position: absolute;
     z-index: 9999;
 }
@@ -74,5 +75,5 @@
 	float: right;
 	position: relative;
 	right: 10px;
-	top: -20px;
+	top: -21px;
 }
